# OS-course

Message sharing/: .gitignore  CMakeLists.txt  Task  client.cpp  libOS.cpp  libOS.hpp
Message_sharing/: CMakeLists.txt  client.cpp  server.cpp
Shared memory an semaphors/: CMakeLists.txt  client1.cpp  client2.cpp  client2.cpp.autosave  libOS.cpp  libOS.hpp  server.cpp
Shared_memory_and_semaphors/: CMakeLists.txt  client1.cpp  server.cpp
Sockets/: CMakeLists.txt  client.cpp  options_and_incls.h  server.cpp
libOS/: libOS.cpp  libOS.hpp
